--- a/compose.yml
+++ b/compose.yml
@@ -1,8 +1,7 @@
 services:
   # Your n8n application service (e.g., a web server)
   server_n8n:
-    image: n8nio/n8n
-    dns: 1.1.1.1
+    build: .
     container_name: cont_n8n
     environment:
       - N8N_TRUST_PROXY=true
@@ -15,8 +14,21 @@ services:
       - n8n_network
     volumes:
       - ${PWD}/vol_n8n:/home/node/.n8n
+      - /media/sdcard/Videos:/home/node/Videos 
     restart: unless-stopped
-
+  nginx:
+    image: nginx:latest
+    container_name: cont_nginx
+    environment:
+      - VIDEO_SECRET=${VIDEO_SECRET}
+    volumes:
+      - /media/sdcard/Videos:/usr/share/nginx/videos  # Mount video directory
+      - ${PWD}/nginx.conf:/etc/nginx/templates/nginx.conf.template  # Mount custom config
+    networks:
+      - n8n_network
+    depends_on:
+      - server_n8n
+    restart: unless-stopped
   # Cloudflare Tunnel service
   cloudflared:
     image: cloudflare/cloudflared:latest
@@ -27,8 +39,6 @@ services:
       - "host.docker.internal:host-gateway"
     networks:
       - n8n_network
-    depends_on:
-      - server_n8n
     # Uncomment if using a credentials file instead of a token:
     # volumes:
     #   - ./tunnel/credentials.json:/etc/cloudflared/credentials.json
