--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ EXTERNAL_IP=https://n8n.giapnv.io.com
 
 # Timezone (optional, already defined in compose)
 TZ=Asia/Ho_Chi_Minh
+# nginx videos secret
+VIDEO_SECRET=absnd
