--- a/nginx.conf
+++ b/nginx.conf
@@ -1,30 +1,45 @@
 server {
-    listen 80;
+    listen 80;  # Container listens on port 80
     server_name localhost;
-
-    # Set your secret key (will be injected via environment variable)
-    set $expected_secret "${VIDEO_SECRET}";
-
+    #set $expected_secret "${VIDEO_SECRET}";
+    # Security: Hide version
+    server_tokens off;
+    
     location /videos/ {
-        # Verify secret key parameter
-        if ($arg_secret_key != $expected_secret) {
-            return 403;
-        }
-
-        root /usr/share/nginx;
-        autoindex off;
-
-        # Security headers
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        # Correct path configuration
+        alias /usr/share/nginx/videos/;
         
+        # Security settings
+        autoindex on;
+        #try_files $uri =404;
+
+        # Secret key verification (uncomment when ready)
+        #if ($arg_secret_key != "${VIDEO_SECRET}") {
+        #     return 403;
+        #}
+        if ($request_method = HEAD) {
+                return 200;
+        }
+    
+    # Add MIME types
+        types {
+                video/mp4 mp4;
+        }
+    
+    # Cache headers
+        add_header Cache-Control "public, max-age=86400";
+
         # Video handling
         mp4;
         mp4_buffer_size 1m;
         mp4_max_buffer_size 5m;
+        
+        # CORS headers
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
     }
 
     location / {
-        return 403;
+        return 200;
     }
 }
