--- a/record_camera/camera_recording.service
+++ b/record_camera/camera_recording.service
@@ -8,7 +8,8 @@ User=root
 ExecStart=/root/camera_records/start_recording.sh
 ExecStop=/bin/sh -c "pkill -9 ffmpeg; exit 0"
 KillMode=process
-Restart=on-failure
+RuntimeMaxSec=1800
+Restart=always
 RestartSec=5
 
 [Install]
